Implements a better way to check if a task was solved correctly by using the == operator of the ratio class itself (fix bug 178007).

I also added a help message to explain users why tasks are counted as wrong
if they were not entered in mixed notation.

additional changes:
- slightly changed one help message (you entered not reduced)
- removed a lot of debug statements from the code
- added clean() function to task; useful for debugging
- some whitespace changes introduced by kdevelop

Changes are partly based on patch provided by Tadeu Araujo. Thanks for your
contribution!

BUG:178007

svn path=/trunk/KDE/kdeedu/kbruch/; revision=963047